improved the writter and charged url of the post

--- a/src/content/blog/lo-que-debes-saber-de-la-inversion.mdx
+++ b/src/content/blog/lo-que-debes-saber-de-la-inversion.mdx
@@ -3,12 +3,12 @@ heroImage: /src/assets/images/saber-inversion.jpg
 category: Educacion
 description: >-
   detalles y respuestas a interrogantes sobre lo que es invertir.
-pubDate: 31 marzo 2024
+pubDate: april 01 2024
 tags:
   - Finanzas
   - Empezar
-  - inversion
-title: lo que debes saber de la inversión.
+  - Inversion
+title: Lo que debes saber de la inversión.
 ---
 
 Antes de contarte todo lo que te puede beneficiar (a veces puede que no te beneficie) te voy decir una definición
@@ -16,9 +16,9 @@ no tan exacta cómo dice en el papel si no como una interpretación.
 
 ## ¿Que es invertir?
 
-Invertir es arte de escoger el sitio adecuado para obtener rentabilidad que sea igual o superior a la inflación.
+Invertir es el arte de escoger el sitio adecuado para obtener rentabilidad que sea igual o superior a la inflación.
 
-lo anterior debe destacar que a mi aparecer porque no todo lugar es bueno o malo, si no escoger el más correcto para tí
+Lo anterior se debe destacar que a mi parecer, porque no todo lugar es bueno o malo, si no escoger el sitio más correcto para tí
 y que minimo sea igual a la `inflación`.
 
 ### ¿Se puede invertir?
